methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:36: error: not found: value haveBaggel
  test= haveBaggel()
        ^